releases/application/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wso2-notifier-backend
  namespace: application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wso2-notifier-backend
  template:
    metadata:
      labels:
        app: wso2-notifier-backend
    spec:
      containers:
      - name: backend
        image: amirchaari/wso2-notifier-backend:28
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: es-ca-cert
          mountPath: /etc/es-certs
          readOnly: true

      volumes:
      - name: es-ca-cert
        secret:
          secretName: es-ca-cert

---
apiVersion: v1
kind: Service
metadata:
  name: wso2-notifier-backend
  namespace: application
spec:
  type: ClusterIP
  selector:
    app: wso2-notifier-backend
  ports:
  - port: 8080
    targetPort: 8080
