releases/application/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wso2-notifier-frontend
  namespace: application
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wso2-notifier-frontend
  template:
    metadata:
      labels:
        app: wso2-notifier-frontend
    spec:
      containers:
      - name: frontend
        image: amirchaari/wso2-notifier-frontend:13
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: wso2-notifier-frontend
  namespace: application
spec:
  type: ClusterIP
  selector:
    app: wso2-notifier-frontend
  ports:
  - port: 80
    targetPort: 80
